load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "admission",
    srcs = ["admission.go"],
    importpath = "github.com/gardener/apiserver-proxy/internal/admission",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook/admission",
    ],
)

go_test(
    name = "admission_test",
    srcs = ["admission_suite_test.go"],
    data = glob(["testdata/**"]),
    embed = [":admission"],
    deps = [
        "//vendor/github.com/onsi/ginkgo",
        "//vendor/github.com/onsi/gomega",
        "//vendor/k8s.io/api/admissionregistration/v1:admissionregistration",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apiserver/pkg/admission",
        "//vendor/k8s.io/apiserver/pkg/admission/plugin/webhook/mutating",
        "//vendor/k8s.io/apiserver/pkg/admission/plugin/webhook/testing",
        "//vendor/k8s.io/apiserver/pkg/authentication/user",
        "//vendor/k8s.io/utils/pointer",
        "//vendor/sigs.k8s.io/controller-runtime",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/envtest/printer",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/log",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/log/zap",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook",
    ],
)
