load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "app.go",
        "config.go",
    ],
    importpath = "github.com/gardener/apiserver-proxy/internal/app",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/iptables:go_default_library",
        "//internal/netif:go_default_library",
        "@com_github_vishvananda_netlink//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
