load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "app.go",
        "config.go",
    ],
    importpath = "github.com/gardener/apiserver-proxy/internal/app",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/iptables",
        "//internal/netif",
        "//vendor/github.com/vishvananda/netlink",
        "//vendor/golang.org/x/xerrors",
        "//vendor/k8s.io/klog/v2:klog",
        "//vendor/k8s.io/utils/exec",
    ],
)
