load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "iptables.go",
        "iptables_linux.go",
        "iptables_unsupported.go",
        "save_restore.go",
    ],
    importpath = "github.com/gardener/apiserver-proxy/internal/iptables",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_apimachinery//pkg/util/version:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
        "@io_k8s_utils//trace:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "iptables_test.go",
        "monitor_test.go",
        "save_restore_test.go",
    ],
    embed = [":go_default_library"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
            "@io_k8s_apimachinery//pkg/util/version:go_default_library",
            "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
            "@io_k8s_utils//exec:go_default_library",
            "@io_k8s_utils//exec/testing:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
            "@io_k8s_apimachinery//pkg/util/version:go_default_library",
            "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
            "@io_k8s_utils//exec:go_default_library",
            "@io_k8s_utils//exec/testing:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
