load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fake.go"],
    importpath = "github.com/gardener/apiserver-proxy/internal/iptables/testing",
    visibility = ["//visibility:public"],
    deps = ["//internal/iptables:go_default_library"],
)
